# FuckPlayer

app/: build.gradle
app/src/androidTest/java/com/andy/fucknativeplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  XThread.h  native-lib.cpp
app/src/main/java/com/andy/fucknativeplayer/: MainActivity.java  XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
